--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,24 @@ font-size: 7vh;
 .content
 {
 
-    min-height: 70vh;
-    background-color:aquamarine;
+   padding: 1vw 4vw;
+
 
 }
+
+.content1
+{
+
+    padding: 1vw 4vw;
+
+
+
+}
+
+
+
+
+
 
 .s
 {
@@ -96,6 +110,16 @@ ul>li
 {
     padding: 10px;
 
+
+
+}
+
+
+.about
+{
+    text-align: left;
+    margin-left: 5vw;
+    line-height: 11vh;
 
 
 }
